Step 10: Add logging and unit testing
* Step 10: Add logging and unit testing 

* Add @BeforeEach to reset database before each test